# sync-pre-commit-with-uv

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  data.json  pyproject.toml
.github/: CODEOWNERS  renovate.json5
.github/workflows/: ci.yml  coverage-comment.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_b307ab7d12058299___main___py.html  z_b307ab7d12058299_exceptions_py.html  z_b307ab7d12058299_sync_py.html  z_b307ab7d12058299_toml_py.html
sync_pre_commit_with_uv/: __main__.py  exceptions.py  sync.py  toml.py
tests/: factories.py  test_full.py  test_main.py  test_sync.py  test_toml.py
