[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
pattern = "default-unprefixed"

[project]
name = "sync_pre_commit_with_uv"
dynamic = ["version"]
description = "Sync versions in .pre-commit-config.yaml from uv.lock"
authors = [{ name = "Joachim Jablon" }]
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE.md" }
keywords = ["pre-commit", "uv"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "uv",
    "ruamel.yaml",
    "packaging",
    "pydantic",
    "tomli; python_version < '3.11'",
    "eval-type-backport; python_version < '3.10'",
]

[project.urls]
Repository = "https://github.com/ewjoachim/sync-pre-commit-with-uv/"

[project.scripts]
sync-pre-commit-with-uv = "sync_pre_commit_with_uv.__main__:cli"

[tool.uv]
default-groups = ["test", "dev"]

[tool.uv.workspace]
members = ["tests/myproject"]

[dependency-groups]
test = [
    "factory-boy",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-subprocess>=1.5.3",
]
dev = ["prek", "ruff", "basedpyright"]

[tool.pytest.ini_options]
addopts = [
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
    "--cov=sync_pre_commit_with_uv",
    "-vv",
    "--strict-markers",
    "-rfE",
]
testpaths = ["tests"]
filterwarnings = """
    error
"""

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "coverage: exclude",
    "if TYPE_CHECKING:",
    "[ ]+\\.\\.\\.$",
]


[tool.basedpyright]
exclude = ["tests", ".venv"]
reportUnknownMemberType = false
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false
reportUnreachable = false

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",   # isort
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "RUF", # ruff
]
fixable = ["ALL"]
extend-ignore = [
    "E501", # line too long
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
